# njorda.github.io

./: .gitignore  .gitmodules  404.html  CNAME  README.md  config.toml  go.mod  go.sum  index.html  index.xml  sitemap.xml
.github/workflows/: gh-pages.yml
about/: index.html
assets/: json.wasm
categories/: index.html  index.xml
content/: about.md
content/about/: index.md
content/homepage/: about.md
content/post/: 2022-02-01-triton-ensemble.md  2022-07-17-hello-world.md  2023-02-01-triton-ensemble.md  2023-02-02-promt-engineering.md  2023-02-06-hugo-with-python-rshiny.md  2023-02-08-hugo-duckdb.md  2023-02-10-go-compiler-pprof.md
content/posts/: 2023-02-01-triton-ensemble.md  2023-02-02-promt-engineering.md  2023-02-07-poor_mans_datalake.md  2023-02-08-hugo-duckdb.md  2023-02-10-go-compiler-pprof.md  2023-02-25-triton-shared-memory.md  2023-02-28-triton-ensemble-model-analyzer.md  2023-03-02-memory-arena.md  2023-03-08-model-drigt.md  2023-03-11-pgx-chatgpt3.md  2023-03-17-vs-code-dev-container.md  2023-03-18-vs-code-dev-container-gcp-credentials.md  2023-03-20-vs-code-dev-container-gcp-credentials.md  2023-03-21-running-kubeflow-pipelines-on-vertex.md  2023-03-23-awesome-go.md  2023-04-02-rust_fdw.md  (+35 more)
homepage/: index.html  index.xml
img/: neon_architecture.avif
post/: index.html  index.xml
posts/: 2023-09-02-run-container-gcp  index.html  index.xml
public/: index.html  index.xml  sitemap.xml
python/datalake/: README.rst  pyproject.toml
python/datalake/tests/: test_datalake.py
search/: index.html  index.xml
tags/: index.html  index.xml
(+107 files in other folders)
