[tool.poetry]
name = "datalake"
version = "0.1.0"
description = ""
authors = ["NikeNano <niklas.sven.hansson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.1.18"
pandas = "^1.5.3"
duckdb = "^0.6.1"
sqlescapy = "^1.0.1"
html5lib = "^1.1"
lxml = "^4.9.2"
dagit = "^1.1.18"
localstack = "^1.3.1"
awscli-local = "^0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
